--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the list of files defined at step 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -134,6 +141,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select a file from the list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -161,6 +175,13 @@
     "    description='Image:',\n",
     ")\n",
     "display(w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the selected file and update config.yml"
    ]
   },
   {
@@ -211,33 +232,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the file from disk"
+    "Load the file from disk, change the resolution level if needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening readonly file: /run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuary2024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
-      "\n",
-      "GET : .zarray\n",
-      "GET : 0.3.0.0.0\n",
-      "[(0, 1), (3, 4), (0, 21), (0, 128), (0, 128)]\n",
-      "GET : 0.3.0.0.1\n",
-      "[(0, 1), (3, 4), (0, 21), (0, 128), (128, 143)]\n",
-      "GET : 0.3.0.1.0\n",
-      "[(0, 1), (3, 4), (0, 21), (128, 240), (0, 128)]\n",
-      "GET : 0.3.0.1.1\n",
-      "[(0, 1), (3, 4), (0, 21), (128, 240), (128, 143)]\n",
-      "(1, 1, 21, 128, 15)\n",
-      "(1, 1, 21, 112, 128)\n",
-      "(1, 1, 21, 128, 128)\n",
-      "(1, 1, 21, 112, 15)\n"
+     "ename": "NameError",
+     "evalue": "name 'filename' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdask\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marray\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mda\u001b[39;00m\n\u001b[1;32m      4\u001b[0m resolution_level \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[0;32m----> 6\u001b[0m store \u001b[38;5;241m=\u001b[39m ims(\u001b[43mfilename\u001b[49m, ResolutionLevelLock\u001b[38;5;241m=\u001b[39mresolution_level, aszarr\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m img \u001b[38;5;241m=\u001b[39m da\u001b[38;5;241m.\u001b[39mfrom_zarr(store)\n\u001b[1;32m      9\u001b[0m nuclei \u001b[38;5;241m=\u001b[39m da\u001b[38;5;241m.\u001b[39mmax(img[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m3\u001b[39m],\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mcompute()\u001b[38;5;241m.\u001b[39msqueeze()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'filename' is not defined"
      ]
     }
    ],
@@ -250,7 +261,8 @@
     "store = ims(filename, ResolutionLevelLock=resolution_level, aszarr=True)\n",
     "\n",
     "img = da.from_zarr(store)\n",
-    "nuclei = da.max(img[0,3],0).compute().squeeze()"
+    "nuclei = da.max(img[0,3],0).compute().squeeze()\n",
+    "print(nuclei.shape)"
    ]
   },
   {
@@ -262,15 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Closing file: /run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuary2024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
-      "\n"
+      "2\n"
      ]
     }
    ],
@@ -283,9 +294,9 @@
     "if regionname.exists():\n",
     "    with open(regionname, \"r\") as outfile:\n",
     "        poly = json.load(outfile)\n",
-    "    c = resolution_level / poly['resolution_level']    \n",
+    "    c = pow(2, poly['resolution_level']- r esolution_level)    \n",
     "    sdata = [c * np.array(p) for p in poly['regions']]\n",
-    "    v.add_shapes(poly['regions'],shape_type='polygon')\n"
+    "    v.add_shapes(sdata,shape_type='polygon')\n"
    ]
   },
   {
@@ -316,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reload the regions"
+    "Reload the regions to check for correctness"
    ]
   },
   {
