--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8475cecacc4463e90357250f9970c29",
+       "model_id": "e9b28bca400a4064bff4c3d5bc53a2b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,6 +48,13 @@
     "\n",
     "fc = FileChooser(dstdir, select_desc='Destination')\n",
     "display(fc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the list of files."
    ]
   },
   {
@@ -145,6 +152,13 @@
     "print(\"Output file list :\", filelistname)\n",
     "filelist = pd.read_csv(filelistname)\n",
     "filelist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define processing functions"
    ]
   },
   {
@@ -268,6 +282,13 @@
     "    df.to_csv(get_files(dstdir, row, 'measurements'), index=False)\n",
     "\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process all files"
    ]
   },
   {
@@ -7642,7 +7663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
