--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization and statistical analysis"
+    "# Visualization and statistical analysis\n",
+    "\n",
+    "Save the results as a 'destination folder/*-stats.csv' file"
    ]
   },
   {
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -530,14 +532,14 @@
        "3     4.633205  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "relative = 100*tbl.div(tbl.sum(axis=1), axis=0)\n",
-    "relative.to_csv('')\n",
+    "relative.to_csv(get_files(dstdir, row, 'stats'))\n",
     "relative\n"
    ]
   },
