--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f17080caf1d540b38ff654fc37457558",
+       "model_id": "585733d1f9df49329f32d7a4942cdcfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,12 +29,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60433df40dfb470fb6b00fd22d22ee3e",
+       "model_id": "46215ccd630c45eeb86dc1ffae42fc3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileChooser(path='/home/jeromeb/work/code/octopus', filename='', title='', show_hidden=False, select_desc='Des…"
+       "FileChooser(path='/home/jeromeb/work/code/octopus/results', filename='', title='', show_hidden=False, select_d…"
       ]
      },
      "metadata": {},
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,15 +81,15 @@
     "print(\"Source folder:\", srcdir)\n",
     "print(\"Destination folder :\", dstdir)\n",
     "print(\"Output file list :\", filelistname)\n",
-    "cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
     "# update yaml config file\n",
+    "cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
     "with open('config.yml', 'w') as file:\n",
     "    yaml.dump(cnf, file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
