--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "585733d1f9df49329f32d7a4942cdcfd",
+       "model_id": "e9e42d202bd0407fab5d54940ccd3ca2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileChooser(path='/run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuar…"
+       "FileChooser(path='/home/jeromeb/work/code/octopus', filename='', title='', show_hidden=False, select_desc='Sou…"
       ]
      },
      "metadata": {},
@@ -29,12 +29,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46215ccd630c45eeb86dc1ffae42fc3b",
+       "model_id": "172eef5cfbb5420c821e8eb0af9a3c25",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileChooser(path='/home/jeromeb/work/code/octopus/results', filename='', title='', show_hidden=False, select_d…"
+       "FileChooser(path='/home/jeromeb/work/code/octopus', filename='', title='', show_hidden=False, select_desc='Des…"
       ]
      },
      "metadata": {},
@@ -47,12 +47,13 @@
     "from ipyfilechooser import FileChooser\n",
     "fc = FileChooser()\n",
     "srcdir, dstdir = '', ''\n",
-    "with open(\"config.yml\", \"r\") as file:    \n",
-    "    config = yaml.safe_load(file)\n",
-    "    if 'source' in config.keys():\n",
-    "        srcdir = Path(config[\"source\"])        \n",
-    "    if 'destination' in config.keys():\n",
-    "        dstdir = Path(config[\"destination\"])            \n",
+    "if Path(\"config.yml\").exists():\n",
+    "    with open(\"config.yml\", \"r\") as file:    \n",
+    "        config = yaml.safe_load(file)\n",
+    "        if 'source' in config.keys():\n",
+    "            srcdir = Path(config[\"source\"])        \n",
+    "        if 'destination' in config.keys():\n",
+    "            dstdir = Path(config[\"destination\"])            \n",
     "fc1 = FileChooser(srcdir, select_desc='Source')\n",
     "fc2 = FileChooser(dstdir, select_desc='Destination')\n",
     "display(fc1)\n",
@@ -61,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source folder: /run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuary2024\n",
-      "Destination folder : /home/jeromeb/work/code/octopus/results\n",
-      "Output file list : /home/jeromeb/work/code/octopus/results/filelist.csv\n"
+      "Source folder: .\n",
+      "Destination folder : .\n",
+      "Output file list : filelist.csv\n"
      ]
     }
    ],
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,45 +119,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>/run/user/1000/gvfs/smb-share:server=cephfs2,s...</td>\n",
-       "      <td>2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/run/user/1000/gvfs/smb-share:server=cephfs2,s...</td>\n",
-       "      <td>2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/run/user/1000/gvfs/smb-share:server=cephfs2,s...</td>\n",
-       "      <td>2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/run/user/1000/gvfs/smb-share:server=cephfs2,s...</td>\n",
-       "      <td>14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              folder  \\\n",
-       "0  /run/user/1000/gvfs/smb-share:server=cephfs2,s...   \n",
-       "1  /run/user/1000/gvfs/smb-share:server=cephfs2,s...   \n",
-       "2  /run/user/1000/gvfs/smb-share:server=cephfs2,s...   \n",
-       "3  /run/user/1000/gvfs/smb-share:server=cephfs2,s...   \n",
-       "\n",
-       "                                                name  \n",
-       "0  2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...  \n",
-       "1  2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...  \n",
-       "2  2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...  \n",
-       "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  "
+       "Empty DataFrame\n",
+       "Columns: [folder, name]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
