--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -39,12 +39,13 @@
     "from pathlib import Path\n",
     "from ipyfilechooser import FileChooser\n",
     "srcdir, dstdir = '', ''\n",
-    "with open(\"config.yml\", \"r\") as file:    \n",
-    "    config = yaml.safe_load(file)\n",
-    "    if 'source' in config.keys():\n",
-    "        srcdir = Path(config[\"source\"])        \n",
-    "    if 'destination' in config.keys():\n",
-    "        dstdir = Path(config[\"destination\"]) \n",
+    "if Path(\"config.yml\").exists():\n",
+    "    with open(\"config.yml\", \"r\") as file:    \n",
+    "        config = yaml.safe_load(file)\n",
+    "        if 'source' in config.keys():\n",
+    "            srcdir = Path(config[\"source\"])        \n",
+    "        if 'destination' in config.keys():\n",
+    "            dstdir = Path(config[\"destination\"]) \n",
     "\n",
     "fc = FileChooser(dstdir, select_desc='Destination')\n",
     "display(fc)"
