--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "529c1bfa5ad543cbbe9dd8e209301014",
+       "model_id": "ea634838fc3a4d2dafcad333e5c14677",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,12 +34,13 @@
     "from pathlib import Path\n",
     "from ipyfilechooser import FileChooser\n",
     "srcdir, dstdir = '', ''\n",
-    "with open(\"config.yml\", \"r\") as file:    \n",
-    "    config = yaml.safe_load(file)\n",
-    "    if 'source' in config.keys():\n",
-    "        srcdir = Path(config[\"source\"])        \n",
-    "    if 'destination' in config.keys():\n",
-    "        dstdir = Path(config[\"destination\"]) \n",
+    "if Path(\"config.yml\").exists():\n",
+    "    with open(\"config.yml\", \"r\") as file:    \n",
+    "        config = yaml.safe_load(file)\n",
+    "        if 'source' in config.keys():\n",
+    "            srcdir = Path(config[\"source\"])        \n",
+    "        if 'destination' in config.keys():\n",
+    "            dstdir = Path(config[\"destination\"]) \n",
     "\n",
     "fc = FileChooser(dstdir, select_desc='destination')\n",
     "display(fc)\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
        "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d29914169af4989b1c08996fa33c978",
+       "model_id": "d0871db7927c421d8358852c6238cfd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input IMS filename: /run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuary2024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims\n",
+      "Input IMS filename: /run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuary2024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims\n",
       "Destination: /home/jeromeb/work/code/octopus/results\n",
-      "Output region file: /home/jeromeb/work/code/octopus/results/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis-regions.json\n"
+      "Output region file: /home/jeromeb/work/code/octopus/results/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis-regions.json\n"
      ]
     }
    ],
@@ -237,18 +238,327 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'filename' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdask\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marray\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mda\u001b[39;00m\n\u001b[1;32m      4\u001b[0m resolution_level \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[0;32m----> 6\u001b[0m store \u001b[38;5;241m=\u001b[39m ims(\u001b[43mfilename\u001b[49m, ResolutionLevelLock\u001b[38;5;241m=\u001b[39mresolution_level, aszarr\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m img \u001b[38;5;241m=\u001b[39m da\u001b[38;5;241m.\u001b[39mfrom_zarr(store)\n\u001b[1;32m      9\u001b[0m nuclei \u001b[38;5;241m=\u001b[39m da\u001b[38;5;241m.\u001b[39mmax(img[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m3\u001b[39m],\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mcompute()\u001b[38;5;241m.\u001b[39msqueeze()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'filename' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening readonly file: /run/user/1000/gvfs/smb-share:server=cephfs2,share=users/acourtney/HCR_Octopus_Jerome/Febuary2024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims \n",
+      "\n",
+      "GET : .zarray\n",
+      "GET : 0.3.0.0.0\n",
+      "[(0, 1), (3, 4), (0, 8), (0, 256), (0, 256)]\n",
+      "GET : 0.3.1.0.0\n",
+      "[(0, 1), (3, 4), (8, 16), (0, 256), (0, 256)]\n",
+      "GET : 0.3.2.0.0\n",
+      "[(0, 1), (3, 4), (16, 24), (0, 256), (0, 256)]\n",
+      "GET : 0.3.3.0.0\n",
+      "[(0, 1), (3, 4), (24, 32), (0, 256), (0, 256)]\n",
+      "GET : 0.3.4.0.0\n",
+      "[(0, 1), (3, 4), (32, 40), (0, 256), (0, 256)]\n",
+      "GET : 0.3.5.0.0\n",
+      "[(0, 1), (3, 4), (40, 45), (0, 256), (0, 256)]\n",
+      "GET : 0.3.0.0.1\n",
+      "[(0, 1), (3, 4), (0, 8), (0, 256), (256, 512)]\n",
+      "GET : 0.3.1.0.1\n",
+      "[(0, 1), (3, 4), (8, 16), (0, 256), (256, 512)]\n",
+      "GET : 0.3.2.0.1\n",
+      "[(0, 1), (3, 4), (16, 24), (0, 256), (256, 512)]\n",
+      "GET : 0.3.3.0.1\n",
+      "[(0, 1), (3, 4), (24, 32), (0, 256), (256, 512)]\n",
+      "GET : 0.3.4.0.1\n",
+      "[(0, 1), (3, 4), (32, 40), (0, 256), (256, 512)]\n",
+      "GET : 0.3.5.0.1\n",
+      "[(0, 1), (3, 4), (40, 45), (0, 256), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.0.0.2\n",
+      "[(0, 1), (3, 4), (0, 8), (0, 256), (512, 538)]\n",
+      "GET : 0.3.1.0.2\n",
+      "[(0, 1), (3, 4), (8, 16), (0, 256), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 5, 256, 256)\n",
+      "GET : 0.3.2.0.2\n",
+      "[(0, 1), (3, 4), (16, 24), (0, 256), (512, 538)]\n",
+      "GET : 0.3.3.0.2\n",
+      "[(0, 1), (3, 4), (24, 32), (0, 256), (512, 538)]\n",
+      "GET : 0.3.4.0.2\n",
+      "[(0, 1), (3, 4), (32, 40), (0, 256), (512, 538)]\n",
+      "GET : 0.3.5.0.2\n",
+      "[(0, 1), (3, 4), (40, 45), (0, 256), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.0.1.0\n",
+      "[(0, 1), (3, 4), (0, 8), (256, 512), (0, 256)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.1.1.0\n",
+      "[(0, 1), (3, 4), (8, 16), (256, 512), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.2.1.0\n",
+      "[(0, 1), (3, 4), (16, 24), (256, 512), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 5, 256, 256)\n",
+      "GET : 0.3.3.1.0\n",
+      "[(0, 1), (3, 4), (24, 32), (256, 512), (0, 256)]\n",
+      "GET : 0.3.4.1.0\n",
+      "[(0, 1), (3, 4), (32, 40), (256, 512), (0, 256)]\n",
+      "GET : 0.3.5.1.0\n",
+      "[(0, 1), (3, 4), (40, 45), (256, 512), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.0.1.1\n",
+      "[(0, 1), (3, 4), (0, 8), (256, 512), (256, 512)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.1.1.1\n",
+      "[(0, 1), (3, 4), (8, 16), (256, 512), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.2.1.1\n",
+      "[(0, 1), (3, 4), (16, 24), (256, 512), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.3.1.1\n",
+      "[(0, 1), (3, 4), (24, 32), (256, 512), (256, 512)]\n",
+      "GET : 0.3.4.1.1\n",
+      "[(0, 1), (3, 4), (32, 40), (256, 512), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.5.1.1\n",
+      "[(0, 1), (3, 4), (40, 45), (256, 512), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.0.1.2\n",
+      "[(0, 1), (3, 4), (0, 8), (256, 512), (512, 538)]\n",
+      "(1, 1, 5, 256, 26)\n",
+      "GET : 0.3.1.1.2\n",
+      "[(0, 1), (3, 4), (8, 16), (256, 512), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "\n",
+      "True\n",
+      "GET : 0.3.2.1.2\n",
+      "[(0, 1), (3, 4), (16, 24), (256, 512), (512, 538)]\n",
+      "GET : 0.3.3.1.2\n",
+      "[(0, 1), (3, 4), (24, 32), (256, 512), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 5, 256, 256)\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.4.1.2\n",
+      "[(0, 1), (3, 4), (32, 40), (256, 512), (512, 538)]\n",
+      "GET : 0.3.5.1.2\n",
+      "[(0, 1), (3, 4), (40, 45), (256, 512), (512, 538)]\n",
+      "GET : 0.3.0.2.0\n",
+      "[(0, 1), (3, 4), (0, 8), (512, 768), (0, 256)]\n",
+      "GET : 0.3.1.2.0\n",
+      "[(0, 1), (3, 4), (8, 16), (512, 768), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.2.2.0\n",
+      "[(0, 1), (3, 4), (16, 24), (512, 768), (0, 256)]\n",
+      "GET : 0.3.3.2.0\n",
+      "[(0, 1), (3, 4), (24, 32), (512, 768), (0, 256)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.4.2.0\n",
+      "[(0, 1), (3, 4), (32, 40), (512, 768), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.5.2.0\n",
+      "[(0, 1), (3, 4), (40, 45), (512, 768), (0, 256)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.0.2.1\n",
+      "[(0, 1), (3, 4), (0, 8), (512, 768), (256, 512)]\n",
+      "GET : 0.3.1.2.1\n",
+      "[(0, 1), (3, 4), (8, 16), (512, 768), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.2.2.1\n",
+      "[(0, 1), (3, 4), (16, 24), (512, 768), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.3.2.1\n",
+      "[(0, 1), (3, 4), (24, 32), (512, 768), (256, 512)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 5, 256, 26)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.4.2.1\n",
+      "[(0, 1), (3, 4), (32, 40), (512, 768), (256, 512)]\n",
+      "GET : 0.3.5.2.1\n",
+      "[(0, 1), (3, 4), (40, 45), (512, 768), (256, 512)]\n",
+      "GET : 0.3.0.2.2\n",
+      "[(0, 1), (3, 4), (0, 8), (512, 768), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 5, 256, 256)\n",
+      "GET : 0.3.1.2.2\n",
+      "[(0, 1), (3, 4), (8, 16), (512, 768), (512, 538)]\n",
+      "GET : 0.3.2.2.2\n",
+      "[(0, 1), (3, 4), (16, 24), (512, 768), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.3.2.2\n",
+      "[(0, 1), (3, 4), (24, 32), (512, 768), (512, 538)]\n",
+      "(1, 1, 5, 256, 256)\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 5, 256, 256)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.4.2.2\n",
+      "[(0, 1), (3, 4), (32, 40), (512, 768), (512, 538)]\n",
+      "GET : 0.3.5.2.2\n",
+      "[(0, 1), (3, 4), (40, 45), (512, 768), (512, 538)]\n",
+      "GET : 0.3.0.3.0\n",
+      "[(0, 1), (3, 4), (0, 8), (768, 1024), (0, 256)]\n",
+      "GET : 0.3.1.3.0\n",
+      "[(0, 1), (3, 4), (8, 16), (768, 1024), (0, 256)]\n",
+      "GET : 0.3.2.3.0\n",
+      "[(0, 1), (3, 4), (16, 24), (768, 1024), (0, 256)]\n",
+      "GET : 0.3.3.3.0\n",
+      "[(0, 1), (3, 4), (24, 32), (768, 1024), (0, 256)]\n",
+      "GET : 0.3.4.3.0\n",
+      "[(0, 1), (3, 4), (32, 40), (768, 1024), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.5.3.0\n",
+      "[(0, 1), (3, 4), (40, 45), (768, 1024), (0, 256)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.0.3.1\n",
+      "[(0, 1), (3, 4), (0, 8), (768, 1024), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.1.3.1\n",
+      "[(0, 1), (3, 4), (8, 16), (768, 1024), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.2.3.1\n",
+      "[(0, 1), (3, 4), (16, 24), (768, 1024), (256, 512)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.3.3.1\n",
+      "[(0, 1), (3, 4), (24, 32), (768, 1024), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.4.3.1\n",
+      "[(0, 1), (3, 4), (32, 40), (768, 1024), (256, 512)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 5, 256, 256)\n",
+      "GET : 0.3.5.3.1\n",
+      "[(0, 1), (3, 4), (40, 45), (768, 1024), (256, 512)]\n",
+      "GET : 0.3.0.3.2\n",
+      "[(0, 1), (3, 4), (0, 8), (768, 1024), (512, 538)]\n",
+      "GET : 0.3.1.3.2\n",
+      "[(0, 1), (3, 4), (8, 16), (768, 1024), (512, 538)]\n",
+      "(1, 1, 5, 256, 26)\n",
+      "GET : 0.3.2.3.2\n",
+      "[(0, 1), (3, 4), (16, 24), (768, 1024), (512, 538)]\n",
+      "GET : 0.3.3.3.2\n",
+      "[(0, 1), (3, 4), (24, 32), (768, 1024), (512, 538)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.4.3.2\n",
+      "[(0, 1), (3, 4), (32, 40), (768, 1024), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 5, 256, 256)\n",
+      "(1, 1, 8, 256, 26)\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.5.3.2\n",
+      "[(0, 1), (3, 4), (40, 45), (768, 1024), (512, 538)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.0.4.0\n",
+      "[(0, 1), (3, 4), (0, 8), (1024, 1097), (0, 256)]\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.1.4.0\n",
+      "[(0, 1), (3, 4), (8, 16), (1024, 1097), (0, 256)]\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "GET : 0.3.2.4.0\n",
+      "[(0, 1), (3, 4), (16, 24), (1024, 1097), (0, 256)]\n",
+      "GET : 0.3.3.4.0\n",
+      "[(0, 1), (3, 4), (24, 32), (1024, 1097), (0, 256)]\n",
+      "GET : 0.3.4.4.0\n",
+      "[(0, 1), (3, 4), (32, 40), (1024, 1097), (0, 256)]\n",
+      "GET : 0.3.5.4.0\n",
+      "[(0, 1), (3, 4), (40, 45), (1024, 1097), (0, 256)]\n",
+      "GET : 0.3.0.4.1\n",
+      "[(0, 1), (3, 4), (0, 8), (1024, 1097), (256, 512)]\n",
+      "GET : 0.3.1.4.1\n",
+      "[(0, 1), (3, 4), (8, 16), (1024, 1097), (256, 512)]\n",
+      "GET : 0.3.2.4.1\n",
+      "[(0, 1), (3, 4), (16, 24), (1024, 1097), (256, 512)]\n",
+      "(1, 1, 8, 73, 256)\n",
+      "GET : 0.3.3.4.1\n",
+      "[(0, 1), (3, 4), (24, 32), (1024, 1097), (256, 512)]\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "GET : 0.3.4.4.1\n",
+      "[(0, 1), (3, 4), (32, 40), (1024, 1097), (256, 512)]\n",
+      "GET : 0.3.5.4.1\n",
+      "[(0, 1), (3, 4), (40, 45), (1024, 1097), (256, 512)]\n",
+      "GET : 0.3.0.4.2\n",
+      "[(0, 1), (3, 4), (0, 8), (1024, 1097), (512, 538)]\n",
+      "GET : 0.3.1.4.2\n",
+      "[(0, 1), (3, 4), (8, 16), (1024, 1097), (512, 538)]\n",
+      "(1, 1, 5, 256, 26)\n",
+      "GET : 0.3.2.4.2\n",
+      "[(0, 1), (3, 4), (16, 24), (1024, 1097), (512, 538)]\n",
+      "(1, 1, 5, 73, 256)\n",
+      "(1, 1, 8, 256, 256)\n",
+      "True\n",
+      "(1, 1, 8, 256, 26)\n",
+      "GET : 0.3.3.4.2\n",
+      "[(0, 1), (3, 4), (24, 32), (1024, 1097), (512, 538)]\n",
+      "GET : 0.3.4.4.2\n",
+      "[(0, 1), (3, 4), (32, 40), (1024, 1097), (512, 538)]\n",
+      "GET : 0.3.5.4.2\n",
+      "[(0, 1), (3, 4), (40, 45), (1024, 1097), (512, 538)]\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 26)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 8, 73, 256)\n",
+      "(1, 1, 5, 73, 26)\n",
+      "(1, 1, 8, 73, 26)\n",
+      "(1, 1, 8, 73, 26)\n",
+      "(1, 1, 8, 73, 26)\n",
+      "(1, 1, 5, 73, 256)\n",
+      "(1, 1, 8, 73, 26)\n",
+      "(1097, 538)\n"
      ]
     }
    ],
@@ -256,7 +566,7 @@
     "from imaris_ims_file_reader.ims import ims\n",
     "import dask.array as da\n",
     "\n",
-    "resolution_level = 4\n",
+    "resolution_level = 1\n",
     "\n",
     "store = ims(filename, ResolutionLevelLock=resolution_level, aszarr=True)\n",
     "\n",
@@ -274,17 +584,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
@@ -294,7 +596,7 @@
     "if regionname.exists():\n",
     "    with open(regionname, \"r\") as outfile:\n",
     "        poly = json.load(outfile)\n",
-    "    c = pow(2, poly['resolution_level']- r esolution_level)    \n",
+    "    c = pow(2, poly['resolution_level']- resolution_level)    \n",
     "    sdata = [c * np.array(p) for p in poly['regions']]\n",
     "    v.add_shapes(sdata,shape_type='polygon')\n"
    ]
