disable config.yml use

--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9e42d202bd0407fab5d54940ccd3ca2",
+       "model_id": "6b253352d4f047e7b55016a94ba2af26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "172eef5cfbb5420c821e8eb0af9a3c25",
+       "model_id": "bd6163e5b098457fa36cd826b1a80140",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +83,9 @@
     "print(\"Destination folder :\", dstdir)\n",
     "print(\"Output file list :\", filelistname)\n",
     "# update yaml config file\n",
-    "cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
-    "with open('config.yml', 'w') as file:\n",
-    "    yaml.dump(cnf, file)\n"
+    "# cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
+    "# with open('config.yml', 'w') as file:\n",
+    "#     yaml.dump(cnf, file)\n"
    ]
   },
   {
