--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -225,8 +225,8 @@
     "print(\"Output region file:\", regionname)\n",
     "cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
     "# update yaml config file\n",
-    "with open('config.yml', 'w') as file:\n",
-    "    yaml.dump(cnf, file)"
+    "# with open('config.yml', 'w') as file:\n",
+    "#     yaml.dump(cnf, file)"
    ]
   },
   {
