--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -242,8 +242,8 @@
     "print(\"Output region file:\", regionname)\n",
     "cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
     "# update yaml config file\n",
-    "with open('config.yml', 'w') as file:\n",
-    "    yaml.dump(cnf, file)"
+    "# with open('config.yml', 'w') as file:\n",
+    "#     yaml.dump(cnf, file)"
    ]
   },
   {
@@ -581,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
