--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -223,8 +223,8 @@
     "print(\"Input IMS filename:\", filename)\n",
     "print(\"Destination:\", dstdir)\n",
     "print(\"Output region file:\", regionname)\n",
-    "cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
     "# update yaml config file\n",
+    "# cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
     "# with open('config.yml', 'w') as file:\n",
     "#     yaml.dump(cnf, file)"
    ]
