fix the intensity quantification

--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -83,9 +83,13 @@
     "print(\"Destination folder :\", dstdir)\n",
     "print(\"Output file list :\", filelistname)\n",
     "# update yaml config file\n",
-    "# cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
-    "# with open('config.yml', 'w') as file:\n",
-    "#     yaml.dump(cnf, file)\n"
+    "try:\n",
+    "    cnf = yaml.safe_load(f'source: \\\"{srcdir.as_posix()}\\\"\\ndestination: \\\"{dstdir.as_posix()}\\\"\\n')\n",
+    "    with open('config.yml', 'w') as file:\n",
+    "        yaml.dump(cnf, file)\n",
+    "except:\n",
+    "    pass\n",
+    "\n"
    ]
   },
   {
