--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -224,9 +224,12 @@
     "print(\"Destination:\", dstdir)\n",
     "print(\"Output region file:\", regionname)\n",
     "# update yaml config file\n",
-    "# cnf = yaml.safe_load(f'source: \\\"{srcdir}\\\"\\ndestination: \\\"{dstdir}\\\"\\n')\n",
-    "# with open('config.yml', 'w') as file:\n",
-    "#     yaml.dump(cnf, file)"
+    "try:\n",
+    "    cnf = yaml.safe_load(f'source: \\\"{srcdir.as_posix()}\\\"\\ndestination: \\\"{dstdir.as_posix()}\\\"\\n')\n",
+    "    with open('config.yml', 'w') as file:\n",
+    "        yaml.dump(cnf, file)\n",
+    "except:\n",
+    "    pass\n"
    ]
   },
   {
