add channel names

--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -140,7 +140,14 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "filelist = pd.DataFrame({'folder': [p.parent for p in srcdir.glob('*.ims')],'name': [p.name for p in srcdir.glob('*.ims')]})\n",
+    "filelist = pd.DataFrame.from_records([{\n",
+    "    'folder': p.parent,\n",
+    "    'name': p.name,\n",
+    "    'channel1': 'ch1',\n",
+    "    'channel2': 'ch2',\n",
+    "    'channel3': 'ch3',\n",
+    "    'channel4': 'nuclei'\n",
+    "    } for p in srcdir.glob('*.ims')])\n",
     "filelist.to_csv(filelistname)\n",
     "filelist"
    ]
