--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3baf9ccffed4fd38b64755530474e7e",
+       "model_id": "7a7bde9146244079b04df006fc1c9432",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,55 +93,76 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>folder</th>\n",
        "      <th>name</th>\n",
+       "      <th>channel1</th>\n",
+       "      <th>channel2</th>\n",
+       "      <th>channel3</th>\n",
+       "      <th>channel4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...</td>\n",
+       "      <td>vglut_B4_546</td>\n",
+       "      <td>ppp1_B1_647</td>\n",
+       "      <td>Th_B3_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...</td>\n",
+       "      <td>tbh_B4_546</td>\n",
+       "      <td>LGC007_B3_647</td>\n",
+       "      <td>vacht_B2_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...</td>\n",
+       "      <td>LGC041_B2_546</td>\n",
+       "      <td>LGC046_B2_647</td>\n",
+       "      <td>Th_B3_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...</td>\n",
+       "      <td>LGC009_B1_647</td>\n",
+       "      <td>vglut_B4_546</td>\n",
+       "      <td>Th_B3_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                                             folder  \\\n",
-       "0           0  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
-       "1           1  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
-       "2           2  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
-       "3           3  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "                                              folder  \\\n",
+       "0  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "1  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "2  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "3  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
        "\n",
-       "                                                name  \n",
-       "0  2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...  \n",
-       "1  2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...  \n",
-       "2  2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...  \n",
-       "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  "
+       "                                                name       channel1  \\\n",
+       "0  2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...   vglut_B4_546   \n",
+       "1  2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...     tbh_B4_546   \n",
+       "2  2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...  LGC041_B2_546   \n",
+       "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  LGC009_B1_647   \n",
+       "\n",
+       "        channel2      channel3 channel4  \n",
+       "0    ppp1_B1_647     Th_B3_488   Nuclei  \n",
+       "1  LGC007_B3_647  vacht_B2_488   Nuclei  \n",
+       "2  LGC046_B2_647     Th_B3_488   Nuclei  \n",
+       "3   vglut_B4_546     Th_B3_488   Nuclei  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,6 +176,57 @@
     "print(\"Output file list :\", filelistname)\n",
     "filelist = pd.read_csv(filelistname)\n",
     "filelist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row = filelist.iloc[0]\n",
+    "channel = int(row[[x.lower() == 'nuclei' for x in row]].index.item().replace('channel',''))-1\n",
+    "nchannels = 4\n",
+    "print(channel)\n",
+    "[ k for k  in range(nchannels) if k != channel ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'c0': 0, 'c1': 1, 'c2': 2, 'c3': 3}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{'a':1, **{f'c{k}':k for k in range(4)}}"
    ]
   },
   {
@@ -274,7 +346,7 @@
     "    return np.maximum(0, d / t - 4)\n",
     "\n",
     "\n",
-    "def record_intensity(labels, score, rois):\n",
+    "def record_intensity(labels, score, rois, channels):\n",
     "    z, y, x = np.meshgrid(*[np.arange(n) for n in labels.shape])\n",
     "    dst = []\n",
     "    label_list = np.unique(labels)\n",
@@ -283,14 +355,12 @@
     "        dst.append(\n",
     "            {\n",
     "                \"label\": idx,\n",
-    "                \"ch1\": ma.MaskedArray(score[0], mask).mean(),\n",
-    "                \"ch2\": ma.MaskedArray(score[1], mask).mean(),\n",
-    "                \"ch3\": ma.MaskedArray(score[2], mask).mean(),\n",
     "                \"roi\": ma.MaskedArray(rois, mask).min(),\n",
     "                \"x\": ma.MaskedArray(x, mask).mean(),\n",
     "                \"y\": ma.MaskedArray(y, mask).mean(),\n",
     "                \"z\": ma.MaskedArray(z, mask).mean(),\n",
     "                \"area\": np.logical_not(mask).sum(),\n",
+    "                **{f'c{channels[k]}': ma.MaskedArray(score[0], mask).mean() for k in range(score.shape[0])},                \n",
     "            }\n",
     "        )\n",
     "    return pd.DataFrame.from_records(dst)\n",
@@ -301,6 +371,9 @@
     "\n",
     "    Segment the nuclei and measure the FISH signal\n",
     "    \"\"\"\n",
+    "    \n",
+    "    # identify the channel with nuclar label\n",
+    "    nuclear_channel = int(row[[x.lower() == 'nuclei' for x in row]].index.item().replace('channel','')) - 1\n",
     "\n",
     "    # load the image\n",
     "    store = ims(\n",
@@ -308,30 +381,34 @@
     "    )\n",
     "    img = da.from_zarr(store)\n",
     "\n",
+    "    nchannels = img.shape[1]\n",
+    "\n",
     "    # segment the cell\n",
     "    labels = model.eval(\n",
-    "        img[:, 3].compute().squeeze(),\n",
+    "        img[:, nuclear_channel].compute().squeeze(),\n",
     "        diameter=30 / resolution_level,\n",
     "        do_3D=False,\n",
     "        anisotropy=3,\n",
     "        min_size=500,\n",
     "        stitch_threshold=0.1,\n",
     "    )[0]\n",
+    "\n",
     "    tifffile.imwrite(get_files(dstdir, row, \"labels\"), labels)\n",
     "\n",
     "    # load the regions\n",
     "    rois = load_regions_as_labels(dstdir, row, labels.shape, resolution_level)\n",
     "    \n",
-    "    # preprocess the channels\n",
+    "    # preprocess the channels    \n",
+    "    channels = [k for k in range(nchannels) if k != nuclear_channel]\n",
     "    score = np.stack(\n",
     "        [\n",
     "            preprocess(img[0, k].compute().squeeze().astype(np.float32))\n",
-    "            for k in range(3)\n",
+    "            for k in range(nchannels) if k != nuclear_channel\n",
     "        ],\n",
     "        0,\n",
     "    )\n",
     "\n",
-    "    df = record_intensity(labels, score, rois)\n",
+    "    df = record_intensity(labels, score, rois, channels)\n",
     "\n",
     "    df.to_csv(get_files(dstdir, row, \"measurements\"), index=False)\n",
     "\n",
