--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b4919aabbe24f19aa95decfabf38ff2",
+       "model_id": "dbcd9945d18a46869de36ab6c063d850",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -79,55 +79,76 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>folder</th>\n",
        "      <th>name</th>\n",
+       "      <th>channel1</th>\n",
+       "      <th>channel2</th>\n",
+       "      <th>channel3</th>\n",
+       "      <th>channel4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...</td>\n",
+       "      <td>vglut_B4_546</td>\n",
+       "      <td>ppp1_B1_647</td>\n",
+       "      <td>Th_B3_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...</td>\n",
+       "      <td>tbh_B4_546</td>\n",
+       "      <td>LGC007_B3_647</td>\n",
+       "      <td>vacht_B2_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...</td>\n",
+       "      <td>LGC041_B2_546</td>\n",
+       "      <td>LGC046_B2_647</td>\n",
+       "      <td>Th_B3_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>/media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...</td>\n",
        "      <td>14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...</td>\n",
+       "      <td>LGC009_B1_647</td>\n",
+       "      <td>vglut_B4_546</td>\n",
+       "      <td>Th_B3_488</td>\n",
+       "      <td>Nuclei</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                                             folder  \\\n",
-       "0           0  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
-       "1           1  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
-       "2           2  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
-       "3           3  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "                                              folder  \\\n",
+       "0  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "1  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "2  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
+       "3  /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...   \n",
        "\n",
-       "                                                name  \n",
-       "0  2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...  \n",
-       "1  2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...  \n",
-       "2  2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...  \n",
-       "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  "
+       "                                                name       channel1  \\\n",
+       "0  2023_13Dec_4a17Dec_F2_Stitched_Cropped_ForAnal...   vglut_B4_546   \n",
+       "1  2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...     tbh_B4_546   \n",
+       "2  2023_20Dec_2aBatch2_12Dec_F1_Stitched_Cropped_...  LGC041_B2_546   \n",
+       "3  14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...  LGC009_B1_647   \n",
+       "\n",
+       "        channel2      channel3 channel4  \n",
+       "0    ppp1_B1_647     Th_B3_488   Nuclei  \n",
+       "1  LGC007_B3_647  vacht_B2_488   Nuclei  \n",
+       "2  LGC046_B2_647     Th_B3_488   Nuclei  \n",
+       "3   vglut_B4_546     Th_B3_488   Nuclei  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +191,17 @@
     "            'labels': get_files(dstdir, row, 'labels'),\n",
     "            'measurements':  get_files(dstdir, row, 'measurements')\n",
     "        }\n",
-    "\n",
+    "    \n",
+    "def get_measurement_channels(df,prefix='c'):\n",
+    "    \"\"\"List the channels name from the measurement data\"\"\"\n",
+    "    return [f'{prefix}{k}' for k in range(10) if f'{prefix}{k}' in df.columns]\n",
+    "    \n",
     "def create_heatmaps(labels, df):    \n",
-    "    heatmaps = np.zeros([3,*labels.shape])\n",
+    "    channel_columns = [f'c{k}' for k in range(10) if f'c{k}' in df.columns]\n",
+    "\n",
+    "    heatmaps = np.zeros([len(channel_columns), *labels.shape])\n",
     "    for row in df.iloc:\n",
-    "        for k, c in enumerate(['ch1','ch2','ch3']):            \n",
+    "        for k, c in enumerate(channel_columns):\n",
     "                heatmaps[k][labels == row['label']] = row[c]  \n",
     "    return heatmaps\n",
     "\n",
@@ -231,13 +258,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdf6f2f9737b431a88cfbd2935ac4653",
+       "model_id": "bf91c780bc434edbb46c67f65efe0a96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
+      "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/test_15024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
       "\n"
      ]
     }
@@ -296,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,15 +332,44 @@
     "df = pd.read_csv(get_files(dstdir, row, 'measurements'), index_col=0)\n",
     "df = pd.DataFrame(df.to_records())\n",
     "\n",
-    "# compute the thresholds\n",
-    "thresholds = {c:df[c].median() + 0.5 * madstd(df[c]) for c in ['ch1','ch2','ch3']}            \n",
+    "channels = get_measurement_channels(df,'ch')\n",
     "\n",
-    "for k,c in enumerate(['ch1','ch2','ch3']):\n",
+    "# compute the thresholds\n",
+    "thresholds = {c:df[c].median() + 0.5 * madstd(df[c]) for c in channels}            \n",
+    "\n",
+    "for k,c in enumerate(channels):\n",
     "    df[f'z{k}'] = (df[c] - df[c].median()) / madstd(df[c])\n",
     "\n",
-    "channels = ['ch1','ch2','ch3']\n",
     "encoder, decoder = encode_channels(df, channels, thresholds)\n",
     "df = df[ df['code id'] !=0 ] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tbh_B4_546', 'LGC007_B3_647', 'Nuclei']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#def map_channels_names(channels):\n",
+    "\n",
+    "#map_channels_names()\n",
+    "get_measurement_channels(row.to_frame().T,'channel')\n",
+    "#row[f'channel{k+1}']\n",
+    "names = {f'c{k}':row[f'channel{k+1}'] for k in range(4)}\n",
+    "channels = ['c0','c1','c3']\n",
+    "[names[c] for c in channels]\n",
+    "\n"
    ]
   },
   {
@@ -325,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Labels layer 'codemaps' at 0x7f3d32277bf0>"
+       "<Labels layer 'codemaps' at 0x7f3d30bf22a0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
